force-app/main/default/objects/JMS_Log__c/JMS_Log__c.object-meta.xml
<CustomObject>
    <description>This is the log entity that stores information about system errors that may be encountered while the system is running.</description>
    <label>SF Inbound &amp; Exception Log</label>
    <nameField>
        <displayFormat>LOG-{000000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Inbound &amp; Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>