force-app/main/default/objects/JMS_Log__c/fields/JMS_ExceptionLine__c.field-meta.xml
<CustomField>
    <fullName>JMS_ExceptionLine__c</fullName>
    <description>This contains the details of the log or information to be written to the log object</description>
    <label>ExceptionLine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>