force-app/main/default/objects/JMS_Log__c/fields/JMS_ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>JMS_ExceptionType__c</fullName>
    <description>This is the exception code from the thrown excpetion</description>
    <label>ExceptionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>