force-app/main/default/objects/JMS_Log__c/fields/JMS_Functionality_Type__c.field-meta.xml
<CustomField>
    <fullName>JMS_Functionality_Type__c</fullName>
    <description>custom field used to identify the integration functionality type of the log record</description>
    <label>Functionality Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AccessToken</fullName>
            </value>
            <value>
                <fullName>collectionReport</fullName>
            </value>
            <value>
                <fullName>createServiceOrder</fullName>
            </value>
            <value>
                <fullName>emergencyworkorder</fullName>
            </value>
            <value>
                <fullName>formataddressexperian</fullName>
            </value>
            <value>
                <fullName>getAssetsFromCSS</fullName>
            </value>
            <value>
                <fullName>getAuthToken</fullName>
            </value>
            <value>
                <fullName>getBillingAccountFromCSS</fullName>
            </value>
            <value>
                <fullName>getbillingaccountmock</fullName>
            </value>
            <value>
                <fullName>getCPREligibilityFromCSS</fullName>
            </value>
            <value>
                <fullName>getCustomerFromCSS</fullName>
            </value>
            <value>
                <fullName>getcustomermock</fullName>
            </value>
            <value>
                <fullName>getDepositFromCSS</fullName>
            </value>
            <value>
                <fullName>getHighLowFromCSS</fullName>
            </value>
            <value>
                <fullName>getHoldReasonFromCSS</fullName>
            </value>
            <value>
                <fullName>getPremiseFromCSS</fullName>
            </value>
            <value>
                <fullName>getpremisemock</fullName>
            </value>
            <value>
                <fullName>getProgramEligibilityFromCSS</fullName>
            </value>
            <value>
                <fullName>getRateFromCSS</fullName>
            </value>
            <value>
                <fullName>getReadHistoryFromCSS</fullName>
            </value>
            <value>
                <fullName>getSchedulingTerritory</fullName>
            </value>
            <value>
                <fullName>updatebillingprofile</fullName>
            </value>
            <value>
                <fullName>updatecustomerprofile</fullName>
            </value>
            <value>
                <fullName>updatepremiseprofile</fullName>
            </value>
            <value>
                <fullName>updateworkorder</fullName>
            </value>
            <value>
                <fullName>validateaddressexperian</fullName>
            </value>
            <value>
                <fullName>getSOListFromCSS</fullName>
            </value>
            <value>
                <fullName>getSODetailsFromCss</fullName>
            </value>
            <value>
                <fullName>maintainVoidSO</fullName>
            </value>
            <value>
                <fullName>submitReads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>