force-app/main/default/objects/JMS_Log__c/fields/JMS_Integration_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>JMS_Integration_Endpoint__c</fullName>
    <label>Integration Endpoint</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>