force-app/main/default/objects/JMS_Log__c/fields/JMS_Integration_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>JMS_Integration_Response_Body__c</fullName>
    <label>Integration Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>