force-app/main/default/objects/JMS_Log__c/fields/JMS_Limits__c.field-meta.xml
<CustomField>
    <fullName>JMS_Limits__c</fullName>
    <description>This field details where the code was in regards to list of governor limits</description>
    <label>Limits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>