force-app/main/default/objects/JMS_Log__c/fields/JMS_Log_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>JMS_Log_Created_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <label>Log Created Date/Time</label>
    <type>DateTime</type>
</CustomField>