force-app/main/default/objects/JMS_Log__c/fields/JMS_Message__c.field-meta.xml
<CustomField>
    <fullName>JMS_Message__c</fullName>
    <description>This is the developer provided string in the debug or exception entry</description>
    <label>Message</label>
    <length>62768</length>
    <type>LongTextArea</type>
</CustomField>