force-app/main/default/objects/JMS_Log__c/fields/JMS_Sequence__c.field-meta.xml
<CustomField>
    <fullName>JMS_Sequence__c</fullName>
    <description>This is an number field to give a unique number to each entry</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>