force-app/main/default/objects/JMS_Log__c/fields/JMS_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>JMS_StackTrace__c</fullName>
    <description>This details the order of method invocation which occurred at the point the debug entry was written</description>
    <label>StackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>