force-app/main/default/objects/JMS_Log__c/recordTypes/JMS_Debug.recordType-meta.xml
<RecordType>
    <fullName>JMS_Debug</fullName>
    <active>true</active>
    <label>Debug</label>
</RecordType>