force-app/main/default/objects/JMS_Log__c/recordTypes/JMS_Exception.recordType-meta.xml
<RecordType>
    <fullName>JMS_Exception</fullName>
    <active>true</active>
    <label>Exception</label>
</RecordType>