force-app/main/default/objects/JMS_Log__c/recordTypes/JMS_Integration_Log.recordType-meta.xml
<RecordType>
    <fullName>JMS_Integration_Log</fullName>
    <active>true</active>
    <label>Integration Log</label>
</RecordType>