force-app/main/default/objects/JMS_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>JMS_ExceptionType__c</columns>
    <columns>JMS_Log_Created_Date_Time__c</columns>
    <columns>JMS_Functionality_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>