force-app/main/default/objects/JMS_Log__c/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>NAME</columns>
    <columns>JMS_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>JMS_Log_Created_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>My View</label>
</ListView>